# esp-drone

./: .build-test-rules.yml  .gitignore  .gitlab-ci.yml  .idf_build_apps.toml  .readthedocs.yml  CMakeLists.txt  README.md  README_cn.md  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
components/core/crazyflie/: CMakeLists.txt  idf_component.yml
components/core/crazyflie/hal/: CMakeLists.txt
components/core/crazyflie/hal/interface/: espnow_ctrl.h  freeRTOSdebug.h  ledseq.h  pm.h  pm_esplane.h  proximity.h  sensors.h  sensors_mpu6050_hm5883L_ms5611.h  usec_time.h  wifilink.h
components/core/crazyflie/hal/src/: CMakeLists.txt  buzzer.c  espnow_ctrl.c  freeRTOSdebug.c  ledseq.c  ow_syslink.c  pca9555.c  pca95x4.c  pm_esplane.c  proximity.c  sensors.c  sensors_bmi088_bmp388.c  sensors_bmi088_spi_bmp388.c  sensors_bosch.c  sensors_mpu6050_hm5883L_ms5611.c  sensors_mpu9250_lps25h.c  syslink.c  usec_time.c  wifilink.c
components/core/crazyflie/modules/: CMakeLists.txt
components/core/crazyflie/modules/interface/: crtp_commander.h  crtp_localization_service.h  estimator.h  estimator_kalman.h  kalman_core.h  pid.h  queuemonitor.h  sitaw.h  stabilizer_types.h  static_mem.h
components/core/crazyflie/modules/src/: CMakeLists.txt  app_channel.c  app_handler.c  attitude_pid_controller.c  comm.c  commander.c  component.mk  console.c  controller.c  controller_indi.c  controller_pid.c  crtp.c  crtp_commander.c  crtp_commander_generic.c  crtp_commander_high_level.c  crtp_commander_rpyt.c  crtp_localization_service.c  crtpservice.c  estimator.c  estimator_complementary.c  estimator_kalman.c  extrx.c  info.c  kalman_core.c  kalman_supervisor.c  log.c  mem.c  msp.c  outlierFilter.c  param.c  pid.c  planner.c  platformservice.c  position_controller_pid.c  position_estimator_altitude.c  power_distribution_stock.c  queuemonitor.c  sensfusion6.c  sound_cf2.c  stabilizer.c  (+4 more)
components/core/crazyflie/modules/src/lighthouse/: lighthouse_core.c  lighthouse_deck_flasher.c
components/core/crazyflie/utils/interface/: cf_math.h  cfassert.h  debug_cf.h  version.h
components/core/crazyflie/utils/interface/lighthouse/: lighthouse_geometry.h
components/core/crazyflie/utils/src/: cfassert.c  configblockeeprom.c  configblockflash.c  cpuid.c  debug_cf.c  sleepus.c  statsCnt.c
components/core/crazyflie/utils/src/lighthouse/: ootx_decoder.c  pulse_processor_v1.c
components/drivers/general/adc/: CMakeLists.txt  adc_esp32.c
components/drivers/general/adc/include/: adc_esp32.h
components/drivers/i2c_devices/vl53l1/: CMakeLists.txt  component.mk  vl53l1x.c  zranger2.c
components/drivers/i2c_devices/vl53l1/core/inc/: vl53l1_api.h  vl53l1_api_calibration.h  vl53l1_api_core.h  vl53l1_api_debug.h  vl53l1_api_preset_modes.h  vl53l1_api_strings.h  vl53l1_core.h  vl53l1_core_support.h  vl53l1_def.h  vl53l1_error_codes.h  vl53l1_error_exceptions.h  vl53l1_error_strings.h  vl53l1_ll_def.h  vl53l1_ll_device.h  vl53l1_nvm_map.h  vl53l1_preset_setup.h  vl53l1_register_funcs.h  vl53l1_register_map.h  vl53l1_wait.h  (+4 more)
components/drivers/i2c_devices/vl53l1/include/: vl53l1_platform_user_config.h  vl53l1_platform_user_data.h  vl53l1x.h  zranger2.h
components/lib/dsp_lib/: CMakeLists.txt  component.mk
components/lib/dsp_lib/BasicMathFunctions/: xtensa_abs_f32.c  xtensa_add_f32.c  xtensa_dot_prod_f32.c  xtensa_mult_f32.c  xtensa_negate_f32.c  xtensa_offset_f32.c  xtensa_scale_f32.c  xtensa_sub_f32.c
components/lib/dsp_lib/CommonTables/: xtensa_common_tables.c  xtensa_const_structs.c
components/lib/dsp_lib/ComplexMathFunctions/: xtensa_cmplx_conj_f32.c  xtensa_cmplx_dot_prod_f32.c  xtensa_cmplx_mag_f32.c  xtensa_cmplx_mag_squared_f32.c  xtensa_cmplx_mult_cmplx_f32.c  xtensa_cmplx_mult_real_f32.c
components/lib/dsp_lib/ControllerFunctions/: xtensa_pid_init_f32.c  xtensa_pid_reset_f32.c  xtensa_sin_cos_f32.c
components/lib/dsp_lib/FastMathFunctions/: xtensa_cos_f32.c  xtensa_sin_f32.c
components/lib/dsp_lib/FilteringFunctions/: xtensa_biquad_cascade_df1_f32.c  xtensa_biquad_cascade_df1_init_f32.c  xtensa_biquad_cascade_df2T_f32.c  xtensa_biquad_cascade_df2T_init_f32.c  xtensa_biquad_cascade_stereo_df2T_f32.c  xtensa_biquad_cascade_stereo_df2T_init_f32.c  xtensa_conv_f32.c  xtensa_conv_partial_f32.c  xtensa_correlate_f32.c  xtensa_fir_decimate_f32.c  xtensa_fir_decimate_init_f32.c  xtensa_fir_f32.c  xtensa_fir_init_f32.c  xtensa_fir_interpolate_f32.c  xtensa_fir_interpolate_init_f32.c  xtensa_fir_lattice_f32.c  xtensa_fir_lattice_init_f32.c  xtensa_fir_sparse_f32.c  xtensa_fir_sparse_init_f32.c  xtensa_iir_lattice_f32.c  xtensa_iir_lattice_init_f32.c  xtensa_lms_f32.c  xtensa_lms_init_f32.c  xtensa_lms_norm_f32.c  xtensa_lms_norm_init_f32.c
components/lib/dsp_lib/MatrixFunctions/: xtensa_mat_add_f32.c  xtensa_mat_cmplx_mult_f32.c  xtensa_mat_init_f32.c  xtensa_mat_inverse_f32.c  xtensa_mat_mult_f32.c  xtensa_mat_scale_f32.c  xtensa_mat_sub_f32.c  xtensa_mat_trans_f32.c
components/lib/dsp_lib/StatisticsFunctions/: xtensa_max_f32.c  xtensa_mean_f32.c  xtensa_min_f32.c  xtensa_power_f32.c  xtensa_rms_f32.c  xtensa_std_f32.c  xtensa_var_f32.c
components/lib/dsp_lib/TransformFunctions/: xtensa_bitreversal.c  xtensa_bitreversal2.c  xtensa_cfft_f32.c  xtensa_cfft_radix2_f32.c  xtensa_cfft_radix2_init_f32.c  xtensa_cfft_radix4_f32.c  xtensa_cfft_radix4_init_f32.c  xtensa_cfft_radix8_f32.c  xtensa_dct4_f32.c  xtensa_dct4_init_f32.c  xtensa_rfft_f32.c  xtensa_rfft_fast_f32.c  xtensa_rfft_fast_init_f32.c  xtensa_rfft_init_f32.c
components/lib/dsp_lib/include/: xtensa_common_tables.h  xtensa_const_structs.h  xtensa_math.h
components/utils/: CMakeLists.txt  FreeRTOS-openocd.c  cfassert.c  configblockeeprom.c  cpuid.c  debug_cf.c  eprintf.c  filter.c  num.c  sleepus.c  statsCnt.c  version.c
components/utils/include/: cf_math.h  cfassert.h  configblock.h  cpuid.h  debug_cf.h  eprintf.h  filter.h  num.h  sleepus.h  statsCnt.h  test_support.h  version.h
components/utils/lighthouse/: pulse_processor.c
components/utils/tdoa/: tdoaEngine.c  tdoaStorage.c
(+140 files in other folders)
