idf_component_register(SRCS "abort.c"
                "cfassert.c"
                "clockCorrectionEngine.c"
                "configblockeeprom.c"
                "cpuid.c"
                "crc_bosch.c"
                "crc.c"
                "debug_cf.c"
                "eprintf.c"
                "filter.c"
                "FreeRTOS-openocd.c"
                "num.c"
                "sleepus.c"
                "statsCnt.c"
                "version.c"
              INCLUDE_DIRS "." "include"
              REQUIRES platform crazyflie config)