idf_component_register(SRCS "./src/app_handler.c" 
                "./src/attitude_pid_controller.c"
                "./src/comm.c"
                "./src/commander.c"
                "./src/console.c"
                "./src/controller_indi.c"
                "./src/controller_mellinger.c"
                "./src/controller_pid.c"
                "./src/controller.c"
                "./src/crtp_commander_generic.c"
                "./src/crtp_commander_high_level.c"
                "./src/crtp_commander_rpyt.c"
                "./src/crtp_commander.c"
                "./src/crtp_localization_service.c"
                "./src/crtp.c"
                "./src/crtpservice.c"
                "./src/estimator_complementary.c"
                "./src/estimator_kalman.c"
                "./src/estimator.c"
                "./src/kalman_core.c"
                "./src/kalman_supervisor.c"
                "./src/log.c"
                "./src/msp.c"
                "./src/outlierFilter.c"
                "./src/param.c"
                "./src/pid.c"
                "./src/planner.c"
                "./src/platformservice.c"
                "./src/position_controller_pid.c"
                "./src/position_estimator_altitude.c"
                "./src/power_distribution_stock.c"
                "./src/pptraj_compressed.c"
                "./src/pptraj.c"
                "./src/queuemonitor.c"
                "./src/range.c"
                "./src/sensfusion6.c"
                "./src/sitaw.c"
                "./src/sound_cf2.c"
                "./src/stabilizer.c"
                "./src/sysload.c"
                "./src/system.c"
                "./src/trigger.c"
                "./src/worker.c"
                INCLUDE_DIRS "." "interface"
                REQUIRES hal utils platform eeprom dsp_lib deck motors config wifi adc)