idf_component_register(SRCS "app_handler.c" 
                "attitude_pid_controller.c"
                "comm.c"
                "commander.c"
                "console.c"
                "controller_indi.c"
                "controller_mellinger.c"
                "controller_pid.c"
                "controller.c"
                "crtp_commander_generic.c"
                "crtp_commander_high_level.c"
                "crtp_commander_rpyt.c"
                "crtp_commander.c"
                "crtp_localization_service.c"
                "crtp.c"
                "crtpservice.c"
                "estimator_complementary.c"
                "estimator_kalman.c"
                "estimator.c"
                "extrx.c"
                "info.c"
                "kalman_core.c"
                "kalman_supervisor.c"
                "log.c"
                "msp.c"
                "outlierFilter.c"
                "param.c"
                "pid.c"
                "planner.c"
                "platformservice.c"
                "position_controller_pid.c"
                "position_estimator_altitude.c"
                "power_distribution_stock.c"
                "pptraj_compressed.c"
                "pptraj.c"
                "queuemonitor.c"
                "range.c"
                "sensfusion6.c"
                "sitaw.c"
                "sound_cf2.c"
                "stabilizer.c"
                "sysload.c"
                "system.c"
                "trigger.c"
                "worker.c"
                INCLUDE_DIRS "." "include"
                REQUIRES hal utils platform eeprom dsp_lib deck_esp32 motors main)